--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 body {
     height: 100vh;
     width: 100vw;
+    padding: 0px 10vw;
+    background-color: black;
 }
 
 body, .page-content {
@@ -22,4 +24,49 @@ body, .page-content {
     display: flex;
     flex-direction: column;
     flex: 6;
+}
+
+.statement-container {
+    flex: 42;
+}
+
+
+.form-container {
+    flex: 35;
+    background-color: white;
+}
+
+form {
+    display: flex;
+    flex-flow: wrap;
+}
+
+.button-container {
+    flex: 40;
+}
+
+.statement-container, .button-container {
+    background-color: #f5f5f5fd;
+}
+
+.bgd-panel {
+    background: url("./peaceful-bgd.jpg");
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+div > input {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-container, .statement-container, .button-container {
+    padding: 5%;
+}
+
+.statement-container > p {
+    margin-top: 15%;
+    font-weight: bold;
+    font-size: 16px;
+    padding-right: 15%;
 }
