--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: 'cute_notesregular';
+    src: url('fonts/cute_notes-webfont.woff2') format('woff2'),
+         url('fonts/cute_notes-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 * {
     box-sizing: border-box;
     margin: 0px;
@@ -39,6 +47,7 @@ body, .page-content {
 form {
     display: flex;
     flex-flow: wrap;
+    gap: 40px;
 }
 
 .button-container {
@@ -69,4 +78,54 @@ div > input {
     font-weight: bold;
     font-size: 16px;
     padding-right: 15%;
+}
+
+.form-column {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.title {
+    box-sizing: content-box;
+    background-color: rgb(0 0 0/ 20%);
+    color: white;
+    padding: 40px 20px;
+    margin-top: 40%;
+    text-align: center;
+    font-family: 'cute_notesregular', sans-serif, system-ui;
+    font-size: 36px;
+}
+
+label { 
+    font-size: 12px;
+    font-weight: lighter;
+    font-family: Lato, Inter, "Open Sans";
+}
+
+button {
+    background-color: #618db3;
+    padding: 5px 25px;
+    border-radius: 10px;
+    color: white;
+    margin-bottom: 15px;
+}
+
+a {
+    color: #618db3;
+}
+
+h3 {
+    margin-bottom: 15px;
+}
+
+input:invalid {
+    border: 2px solid red;
+    border-radius: 5px;
+}
+
+input:focus {
+    border: 2px solid blue;
+    box-shadow: 0px 0px 2px 1px gray;
+    border-radius: 5px;
 }
